# test-package-py

./: LICENSE  README.md  pyproject.toml
.github/workflows/: package-manager-publish-python.yaml
