[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test-project-py"
version = "1.0.0"
authors = [
  { name="Joe Roberts", email="joe.roberts@rstudio.com" },
]
description = "A Test Python Package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jvroberts/test-package-py"
"Bug Tracker" = "https://github.com/jvroberts/test-package-py/issues"

